--- a/cours.html
+++ b/cours.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -25,7 +25,7 @@
 
       <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
-      <div id="socials">
+      <div class="socials">
         <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
@@ -60,7 +60,7 @@
 
     <fieldset>
       <legend>
-        <h2> Dévelopement </h2>
+        <h2> Développement </h2>
       </legend>
       <ul>
         <li>
@@ -213,7 +213,7 @@
         travailleurs de suivre leur formation dans un campus d’accueil. </p>
     </div>
 
-    <div id="socials">
+    <div class="socials">
       <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
