--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Baptiste Crepin, Loïc Verdier">
-  <link href="main.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="main.css" media="all" rel="stylesheet" type="text/css">
   <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
   <title>Supinfo</title>
 </head>
@@ -22,7 +22,7 @@
 
       <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
-      <div id="socials">
+      <div class="socials">
         <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
@@ -64,7 +64,7 @@
 
     <section id="description">
       <div class="title">
-        <h2>l'école des experts métiers de l'informatique</h2>
+        <h2>L'école des experts métiers de l'informatique</h2>
       </div>
       <div class="container">
         <aside>
@@ -138,7 +138,7 @@
         </div>
 
         <div class="card">
-          <img src="./Medias/Villes/lille.jpg" alt="Lille" />
+          <img src="./Medias/Villes/lille.jpg" alt="Lille">
           <div class="text">
             <h4>Supinfo Lille</h4>
             <p>Quatrième agglomération française, capitale du Nord et des Hauts-de-France, Lille est notamment connue
@@ -193,7 +193,6 @@
           </div>
         </div>
 
-
         <div class="card">
           <img src="./Medias/Villes/caen.jpg" alt="Caen">
           <div class="text">
@@ -245,6 +244,7 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
 
     <section id="debouches">
@@ -255,39 +255,43 @@
       <div id="specialite">
 
         <div class="card">
-          <img src="./Medias/Background/intelligence-artificielle.jpg">
-          <h3>Intelligence artificielle<h3>
+          <img src="./Medias/Background/intelligence-artificielle.jpg" alt="intelligence artificielle">
+          <h3>Intelligence artificielle</h3>
         </div>
         <div class="card">
-          <img src="./Medias/Background/cloud-infra.jpg">
-          <h3>Cloud infrastructure<h3>
+          <img src="./Medias/Background/cloud-infra.jpg" alt="cloud infra">
+          <h3>Cloud infrastructure</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/cloud-security.jpg">
-          <h3>Cloud security<h3>
+        <div class="card"> <img src="./Medias/Background/cloud-security.jpg" alt="cloud security">
+          <h3>Cloud security</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/big-data.jpg">
-          <h3>Big data<h3>
+        <div class="card"> <img src="./Medias/Background/big-data.jpg" alt="big data">
+          <h3>Big data</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/information-system.jpg">
-          <h3>Information systeme<h3>
+        <div class="card"> <img src="./Medias/Background/information-system.jpg" alt="information system">
+          <h3>Information systeme</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/project-management.jpg">
-          <h3>Project management<h3>
+        <div class="card"> <img src="./Medias/Background/project-management.jpg" alt="project management">
+          <h3>Project management</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/web.jpg">
-          <h3>Web<h3>
+        <div class="card"> <img src="./Medias/Background/web.jpg" alt="web">
+          <h3>Web</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/sales.jpg">
-          <h3>Sales<h3>
+        <div class="card"> <img src="./Medias/Background/sales.jpg" alt="sales">
+          <h3>Sales</h3>
         </div>
-        <div class="card"> <img src="./Medias/Background/human-skills.jpg">
-          <h3>Human skills & Management<h3>
+        <div class="card"> <img src="./Medias/Background/human-skills.jpg" alt="human skills and management">
+          <h3>Human skills & Management</h3>
         </div>
 
       </div>
-      <a href="./cours.html">
-        <div class="button"><button>Plus d'informations sur les filiaires</button></div>
-      </a>
+
+      <div class="button">
+        <a href="./cours.html">
+          <button>Plus d'informations sur les filiaires</button>
+        </a>
+      </div>
+
     </section>
 
     <section id="ionis">
@@ -318,7 +322,7 @@
             <img src="./Medias/Background/ionis-group.png" alt="ionis group galaxy">
 
             <div class="key-elements">
-              <section>
+              <div class="wrapper">
                 <div class="card">
                   <i class="fa-solid fa-user-group"></i>
                   <p>30 000 étudiants</p>
@@ -327,8 +331,8 @@
                   <i class="fa-solid fa-user-graduate"></i>
                   <p>Plus de 80 000 anciens</p>
                 </div>
-              </section>
-              <section>
+              </div>
+              <div class="wrapper">
                 <div class="card">
                   <i class="fa-solid fa-school"></i>
                   <p>27 campus</p>
@@ -337,7 +341,7 @@
                   <i class="fa-solid fa-handshake"></i>
                   <p>numéro un de l’enseignement de l’informatique et de la tech en France</p>
                 </div>
-              </section>
+              </div>
             </div>
           </div>
         </div>
@@ -364,7 +368,7 @@
         travailleurs de suivre leur formation dans un campus d’accueil. </p>
     </div>
 
-    <div id="socials">
+    <div class="socials">
       <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
