--- a/planning.html
+++ b/planning.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:https="http://www.w3.org/1999/xhtml">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -25,7 +25,7 @@
 
       <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
-      <div id="socials">
+      <div class="socials">
         <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
@@ -58,9 +58,11 @@
     <div id="grille">
 
       <table>
-        <th colspan="10">
-          <h3> Emploie du temps</h3>
-        </th>
+        <tr>
+          <th colspan="6">
+            <p> Emploie du temps</p>
+          </th>
+        </tr>
 
         <tr>
           <td></td>
@@ -91,7 +93,7 @@
 
         <tr>
           <td>12h - 13h</td>
-          <td colspan="10" id="midi">pause du midi</td>
+          <td colspan="5" id="midi">pause du midi</td>
 
         </tr>
 
@@ -138,7 +140,7 @@
         travailleurs de suivre leur formation dans un campus d’accueil. </p>
     </div>
 
-    <div id="socials">
+    <div class="socials">
       <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
