--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Baptiste Crepin, Loïc Verdier">
-  <link href="./trombinoscope.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="./trombinoscope.css" media="all" rel="stylesheet" type="text/css">
   <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
   <title>Trombinoscope</title>
 </head>
@@ -24,7 +24,7 @@
 
         <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
-        <div id="socials">
+        <div class="socials">
           <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
@@ -57,7 +57,7 @@
     <div id="container">
       <div id="grid">
         <div class="card">
-          <img src="./Medias/students/1.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/1.jpg" alt="1er-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/2.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/2.jpg" alt="2eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/3.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/3.jpg" alt="3eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/4.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/4.jpg" alt="4eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/5.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/5.jpg" alt="5eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/6.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/6.jpg" alt="6eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/7.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/7.jpg" alt="7eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/8.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/8.jpg" alt="8eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/9.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/9.jpg" alt="9eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -138,7 +138,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/10.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/10.jpg" alt="10eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -147,7 +147,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/11.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/11.jpg" alt="11eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/12.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/12.jpg" alt="12eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -165,7 +165,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/13.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/13.jpg" alt="13eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -174,7 +174,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/14.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/14.jpg" alt="14eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -183,7 +183,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/15.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/15.jpg" alt="15eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -192,7 +192,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./Medias/students/16.jpg" height="200vh" width="150vh">
+          <img src="./Medias/students/16.jpg" alt="16eme-eleve">
           <div class="text">
             <h3>John Doe</h3>
             <p>06/12/34/56/78</p>
@@ -222,7 +222,7 @@
         travailleurs de suivre leur formation dans un campus d’accueil. </p>
     </div>
 
-    <div id="socials">
+    <div class="socials">
       <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
       <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
