fully replaced font-awsome by svgs

--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
       <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
       <div class="socials">
-        <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+        <a href="https://www.facebook.com/supinfo"><img class="svg" src="assets/svg/facebook-f.svg"></img></a>
+        <a href="https://www.instagram.com/supinfo/"><img class="svg" src="assets/svg/instagram.svg"></img></a>
+        <a href="https://twitter.com/SUPINFO"><img class="svg" src="assets/svg/twitter.svg"></img></a>
+        <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><img class="svg"
+            src="assets/svg/linkedin.svg"></img></a>
+        <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><img class="svg"
+            src="assets/svg/youtube.svg"></img></a>
+        <a href="https://discord.com/invite/K3ebhDTupy"><img class="svg" src="assets/svg/discord.svg"></img></a>
       </div>
 
     </div>
 
     <nav>
       <input type="checkbox" id="navbutton" class="toggle">
-      <label for="navbutton"><i class="fa-solid fa-bars"></i>
+      <label for="navbutton"><img class="svg" src="assets/svg/bars-solid.svg"></img>
 
         <div id="navbar">
           <a href="./index.html#">Accueil</a>
@@ -54,7 +56,7 @@
     <p>Inspirer les générations futures</p>
 
     <a href="#content">
-      <div class="circle"><i class="fa-solid fa-arrow-down"></i></div>
+      <div class="circle"><img class="svg" src="assets/svg/arrow-down-solid.svg"></img></div>
     </a>
   </div>
 
@@ -106,11 +108,13 @@
     <section id="ecoles">
       <div class="title">
         <h2>5 Campus</h2>
-        <i class="fa-solid fa-school"></i>
+        <img class="svg" src="assets/svg/school-solid.svg"></img>
       </div>
       <div id="campus" class="scrollable">
         <div class="card">
-          <img src="./assets/pictures/Villes/paris.jpg" alt="Paris">
+          <aside>
+            <img src="./assets/pictures/Villes/paris.jpg" alt="Paris">
+          </aside>
           <div class="text">
             <h4>Supinfo Paris</h4>
             <p>
@@ -131,14 +135,16 @@
             <p>28, rue des Francs Bourgeois
               75003, Paris</p>
             <div class="phone">
-              <i class="fa-solid fa-phone"></i>
+              <img class="svg" src="assets/svg/phone-solid.svg"></img>
               <p>01 44 78 88 88</p>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="./assets/pictures/Villes/lille.jpg" alt="Lille">
+          <aside>
+            <img src="./assets/pictures/Villes/lille.jpg" alt="Lille">
+          </aside>
           <div class="text">
             <h4>Supinfo Lille</h4>
             <p>Quatrième agglomération française, capitale du Nord et des Hauts-de-France, Lille est notamment connue
@@ -160,14 +166,16 @@
             <h4>Informations complementaires</h4>
             <p>57 bis Place Rihour 59800 Lille</p>
             <div class="phone">
-              <i class="fa-solid fa-phone"></i>
+              <img class="svg" src="assets/svg/phone-solid.svg"></img>
               <p>06 74 66 29 28</p>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="./assets/pictures/Villes/lyon.jpg" alt="Lyon">
+          <aside>
+            <img src="./assets/pictures/Villes/lyon.jpg" alt="Lyon">
+          </aside>
           <div class="text">
             <h4>Supinfo Lyon</h4>
             <p>Capitale mondiale de la gastronomie, Lyon est aussi une ville où il fait bon étudier.Elle affiche en
@@ -187,14 +195,16 @@
             <h4>Informations complementaires</h4>
             <p>85 boulevard Marius Vivier Merle 69003 Lyon</p>
             <div class="phone">
-              <i class="fa-solid fa-phone"></i>
+              <img class="svg" src="assets/svg/phone-solid.svg"></img>
               <p>06 34 90 17 55</p>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="./assets/pictures/Villes/caen.jpg" alt="Caen">
+          <aside>
+            <img src="./assets/pictures/Villes/caen.jpg" alt="Caen">
+          </aside>
           <div class="text">
             <h4>Supinfo Caen</h4>
             <p>La ville normande est connue pour accueillir une large communauté d’étudiants. Avec plus de 33 000
@@ -213,14 +223,16 @@
             <h4>Informations complementaires</h4>
             <p>10 rue Alfred Kastler 14000 Caen</p>
             <div class="phone">
-              <i class="fa-solid fa-phone"></i>
+              <img class="svg" src="assets/svg/phone-solid.svg"></img>
               <p>06 95 85 70 91</p>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="./assets/pictures/Villes/tours.jpg" alt="Tours">
+          <aside>
+            <img src="./assets/pictures/Villes/tours.jpg" alt="Tours">
+          </aside>
           <div class="text">
             <h4>Supinfo Tours</h4>
             <p>On peut aisément parler d’une ville de culture et d’histoire pour désigner Tours. Pour ce qui est de
@@ -239,7 +251,7 @@
             <h4>Informations complementaires</h4>
             <p>8 bis rue Daniel Mayer- bâtiment 3 37100 Tours</p>
             <div class="phone">
-              <i class="fa-solid fa-phone"></i>
+              <img class="svg" src="assets/svg/phone-solid.svg"></img>
               <p>06 58 31 88 43</p>
             </div>
           </div>
@@ -250,7 +262,7 @@
     <section id="debouches">
       <div class="title">
         <h2>Les différentes spécialisations</h2>
-        <i class="fa-solid fa-code"></i>
+        <img class="svg" src="assets/svg/code-solid.svg"></img>
       </div>
       <div id="specialite">
 
@@ -297,7 +309,7 @@
     <section id="ionis">
       <div class="title">
         <h2>SUPINFO, une école au sein d'un Groupe leader : IONIS Education Group</h2>
-        <i class="fa-solid fa-people-group"></i>
+        <img class="svg" src="assets/svg/people-group-solid.svg"></img>
       </div>
       <div class="container">
         <div class="text">
@@ -324,21 +336,21 @@
             <div class="key-elements">
               <div class="wrapper">
                 <div class="card">
-                  <i class="fa-solid fa-user-group"></i>
+                  <img class="svg" src="assets/svg/user-group-solid.svg"></img>
                   <p>30 000 étudiants</p>
                 </div>
                 <div class="card">
-                  <i class="fa-solid fa-user-graduate"></i>
+                  <img class="svg" src="assets/svg/user-graduate-solid.svg"></img>
                   <p>Plus de 80 000 anciens</p>
                 </div>
               </div>
               <div class="wrapper">
                 <div class="card">
-                  <i class="fa-solid fa-school"></i>
+                  <img class="svg" src="assets/svg/school-solid.svg"></img>
                   <p>27 campus</p>
                 </div>
                 <div class="card">
-                  <i class="fa-solid fa-handshake"></i>
+                  <img class="svg" src="assets/svg/handshake-solid.svg"></img>
                   <p>numéro un de l’enseignement de l’informatique et de la tech en France</p>
                 </div>
               </div>
@@ -369,12 +381,14 @@
     </div>
 
     <div class="socials">
-      <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-      <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+      <a href="https://www.facebook.com/supinfo"><img class="svg" src="assets/svg/facebook-f.svg"></img></a>
+      <a href="https://www.instagram.com/supinfo/"><img class="svg" src="assets/svg/instagram.svg"></img></a>
+      <a href="https://twitter.com/SUPINFO"><img class="svg" src="assets/svg/twitter.svg"></img></a>
+      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><img class="svg"
+          src="assets/svg/linkedin.svg"></img></a>
+      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><img class="svg"
+          src="assets/svg/youtube.svg"></img></a>
+      <a href="https://discord.com/invite/K3ebhDTupy"><img class="svg" src="assets/svg/discord.svg"></img></a>
     </div>
 
     <div id="redirect">
