--- a/lessons.html
+++ b/lessons.html
@@ -26,19 +26,21 @@
       <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
       <div class="socials">
-        <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+        <a href="https://www.facebook.com/supinfo"><img class="svg" src="assets/svg/facebook-f.svg"></img></a>
+        <a href="https://www.instagram.com/supinfo/"><img class="svg" src="assets/svg/instagram.svg"></img></a>
+        <a href="https://twitter.com/SUPINFO"><img class="svg" src="assets/svg/twitter.svg"></img></a>
+        <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><img class="svg"
+            src="assets/svg/linkedin.svg"></img></a>
+        <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><img class="svg"
+            src="assets/svg/youtube.svg"></img></a>
+        <a href="https://discord.com/invite/K3ebhDTupy"><img class="svg" src="assets/svg/discord.svg"></img></a>
       </div>
 
     </div>
 
     <nav>
       <input type="checkbox" id="navbutton" class="toggle">
-      <label for="navbutton"><i class="fa-solid fa-bars"></i>
+      <label for="navbutton"><img class="svg" src="assets/svg/bars-solid.svg"></img>
 
         <div id="navbar">
           <a href="./index.html#">Accueil</a>
@@ -214,12 +216,14 @@
     </div>
 
     <div class="socials">
-      <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-      <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+      <a href="https://www.facebook.com/supinfo"><img class="svg" src="assets/svg/facebook-f.svg"></img></a>
+      <a href="https://www.instagram.com/supinfo/"><img class="svg" src="assets/svg/instagram.svg"></img></a>
+      <a href="https://twitter.com/SUPINFO"><img class="svg" src="assets/svg/twitter.svg"></img></a>
+      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><img class="svg"
+          src="assets/svg/linkedin.svg"></img></a>
+      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><img class="svg"
+          src="assets/svg/youtube.svg"></img></a>
+      <a href="https://discord.com/invite/K3ebhDTupy"><img class="svg" src="assets/svg/discord.svg"></img></a>
     </div>
 
     <div id="redirect">
